--- a/src/app/components/pages/carrello/aggiungi-al-carrello/aggiungi-al-carrello.component.html
+++ b/src/app/components/pages/carrello/aggiungi-al-carrello/aggiungi-al-carrello.component.html
@@ -1,3 +1,2 @@
-PROVA
-<a class="dropdown-item" (click)="aggiungiAlCarrello()" class="btn btn-success btn-lg text-white">Aggiungi al
+<a class="dropdown-item" (click)="aggiungiAlCarrello()" class="btn btn-success btn-lg text-white d-flex justify-content-center">Aggiungi al
     carrello</a>
