--- a/src/app/components/pages/dashboard/dashboard.component.html
+++ b/src/app/components/pages/dashboard/dashboard.component.html
@@ -1,5 +1,10 @@
 <div class="container-fluid justify-content-center">
     <div class="text-center p-3">
+        <div class="promotion-banner">
+            <h1>Offerta promozionale!</h1>
+            <p><h3>Solo per Agosto!</h3>
+                <p>Sconto speciale del 30% su tutti i prodotti di stagione</p>
+        </div>
         <video style="float: right; margin-left: 50px" width="560" height="500" autoplay muted loop>
             <source src="assets/media/video/pexels-jessica-politi-992601-1280x720-25fps.mp4" type="video/mp4">
         </video>
