--- a/src/app/components/pages/frutta/frutta.component.html
+++ b/src/app/components/pages/frutta/frutta.component.html
@@ -11,9 +11,9 @@
               <label for="checkbox06">Mele Rosse</label>
             </div>
             <div>
-              <label for="inputNumber" class="input-number-label">grammi</label>
+              <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
-                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.5"
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
                   min="0.00">
               </span>
             </div>
@@ -24,7 +24,7 @@
               <label for="checkbox07">Mele Gialle</label>
             </div>
             <div>
-              <label for="inputNumber" class="input-number-label">grammi</label>
+              <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
                 <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
                   min="0.00">
@@ -37,7 +37,7 @@
               <label for="checkbox8">Mele Verdi</label>
             </div>
             <div>
-              <label for="inputNumber" class="input-number-label">grammi</label>
+              <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
                 <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
                   min="0.00">
@@ -50,7 +50,7 @@
               <label for="checkbox9">Banane</label>
             </div>
             <div>
-              <label for="inputNumber" class="input-number-label">grammi</label>
+              <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
                 <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
                   min="0.00" disabled>
@@ -63,9 +63,9 @@
               <label for="checkbox10">Kiwi</label>
             </div>
             <div>
-              <label for="inputNumber" class="input-number-label">grammi</label>
+              <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
-                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.5"
+                <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
                   min="0.00">
               </span>
             </div>
@@ -76,7 +76,7 @@
               <label for="checkbox11">Fragole</label>
             </div>
             <div>
-              <label for="inputNumber" class="input-number-label">grammi</label>
+              <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
                 <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
                   min="0.00">
@@ -89,7 +89,7 @@
               <label for="checkbox12">Pere</label>
             </div>
             <div>
-              <label for="inputNumber" class="input-number-label">grammi</label>
+              <label for="inputNumber" class="input-number-label">Kg</label>
               <span class="input-number">
                 <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00"
                   min="0.00">
