--- a/src/app/components/pages/ortaggi/ortaggi.component.html
+++ b/src/app/components/pages/ortaggi/ortaggi.component.html
@@ -11,9 +11,9 @@
                 <label for="checkbox6">Rucola</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.5" min="0.00">
+                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>  
                 </div>
             </li>
@@ -23,7 +23,7 @@
                 <label for="checkbox7">Carote</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
@@ -35,7 +35,7 @@
                 <label for="checkbox8">Invidia</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
@@ -47,7 +47,7 @@
                 <label for="checkbox10">Patate</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
@@ -59,7 +59,7 @@
                 <label for="checkbox11">Sedano</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
@@ -71,7 +71,7 @@
                 <label for="checkbox12">Pomodori</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
@@ -83,7 +83,7 @@
                 <label for="checkbox12">Patate Zuccherine</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
