--- a/src/app/components/pages/carrello/carrello.component.html
+++ b/src/app/components/pages/carrello/carrello.component.html
@@ -1,6 +1,6 @@
 <section>
     <img src="assets/media/images/1000_F_596954459_eQAmZ9c7YW3Q6KgbCLAV1SC0PStHNt6O.jpg" alt="Carrello"
-        style="float: right; margin-top: 250px; margin-right: 30px;" mar height="340">
+        style="float: right; margin-top: 100px; margin-right: 30px;" mar height="250">
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-lg-6 order-md-last p-5">
@@ -79,6 +79,11 @@
                     <hr class="my-3">
                     <a class="dropdown-item" (click)="onpagamentoClick()"
                         class="btn btn-success btn-lg text-white">Procedi e Paga</a>
+                        <div class="row d-flex justify-content-center">
+                            <div class="col-md-5 col-ms-8 order-md-last">
+                                <a class="btn btn-danger btn-lg text-white mt-4" (click)="svuotaCarrello()">Svuota Carrello</a>
+                            </div>
+                        </div>
                 </ul>
             </div>
         </div>
