--- a/src/app/components/pages/verdura/verdura.component.html
+++ b/src/app/components/pages/verdura/verdura.component.html
@@ -11,9 +11,9 @@
                 <label for="checkbox6">Broccoli</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="1.00" min="0.00">
+                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>  
                 </div>
             </li>
@@ -23,7 +23,7 @@
                 <label for="checkbox7">Biete</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
@@ -35,9 +35,9 @@
                 <label for="checkbox8">Spinaci</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="1.00" min="0.00">
+                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
                 </div>
             </li>
@@ -47,7 +47,7 @@
                 <label for="checkbox9">Melanzane</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00" disabled>
                   </span>
@@ -59,9 +59,9 @@
                 <label for="checkbox10">Zucchine</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
-                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="2.00" min="0.00">
+                      <input type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
                 </div>
             </li>
@@ -71,7 +71,7 @@
                 <label for="checkbox11">Fagiolini</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input #numFagiolini type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
@@ -83,7 +83,7 @@
                 <label for="checkbox12">Carciofi</label>
               </div>
               <div>
-                  <label for="inputNumber" class="input-number-label">grammi</label>
+                  <label for="inputNumber" class="input-number-label">Kg</label>
                   <span class="input-number">
                       <input #numCarciofi type="number" data-bs-input id="input-number" name="input-number" step="0.5" value="0.00" min="0.00">
                   </span>
